fix history items not aligned and not spacing properly when there are few items

--- a/style.css
+++ b/style.css
@@ -17,10 +17,13 @@
     100vh - var(--player-choice-container-height) -
       var(--height-player-computer-label)
   );
+  --history-item-height: 80px;
+  --history-item-width: 80px;
   --player-choice-emoji-size: 60px;
   --history-emoji-size: 40px;
   --gap-player-choice: 50px;
   --gap-player-computer-history: 200px;
+  --gap-history-content: 40px;
   --font-size-player-computer-label: 2rem;
   --gap-playerLabel-playerWin: 0.5rem;
   --gap-computerLabel-computerWin: var(--gap-playerLabel-playerWin);
@@ -99,14 +102,20 @@ body {
 .computer-history-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: var(--gap-history-content);
   align-items: center;
   height: var(--height-player-computer-history-container);
+  flex-wrap: nowrap;
 }
 
 .history {
   font-size: var(--history-emoji-size);
   opacity: var(--emoji-history-opacity);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--history-item-width);
+  height: var(--history-item-height);
 }
 
 .player-choice-container .choice {
